# memoize-it

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
memoize_it/: __init__.py  core.py
tests/: test_memoize_it.py
